Fixed issue where can keep pressing to create the same relationship and the feedback keeps appearing, now it says relationship already exists as well as small issues with the same feedback box if titles are too long. Added permission check for deleting relationships.

--- a/edu.illinois.ncsa.mmdb.web/war/mmdb.css
+++ b/edu.illinois.ncsa.mmdb.web/war/mmdb.css
@@ -1213,7 +1213,7 @@ a:hover {
 }
 
 .relationshipDatasets {
-	margin-left: 100px;
+	margin-left: 85px;
 }
 
 .relationshipSubmit {
